# TelegaParserAI

./: .env.example  .gitignore  Dockerfile  alembic.ini  config.py  data_new.db  docker-compose.yml  docker-composesql3.yml  main.py  parser.txt  pyproject.toml  readme.md  readme_docker.md  requirements.txt  session_name.session  user_session.session
constants/: db_constants.py  logger.py
core/: ai_filter.py  bot_controller.py  channel_finder.py  checker.py  client.py  clients.py  parser.py  states.py
data/: mydatabase.db
database/: database.py  db.py  db_commands.py  models.py  settings.py
example/: test channel.md  txt_shema_mosh.md
keyboards/: keyboards.py
migration/: env.py
migration/versions/: 13f3361b8e92_init.py  86953d20e230_init.py  cd78e800f8f6_init.py
tests/: test_ai_filter.py  test_db_commands.py
utils/: logger.py
